commitMessage : MINOR: Do not hold on to request buffers unless the request is using zero-copy